--- a/style.css
+++ b/style.css
@@ -64,3 +64,27 @@ footer{
   height:50px;
   background-color:#aaa;
 }
+
+@media screen and (max-width:768px) {
+  header{
+    width:100%;
+  }
+
+  main{
+    width:90%;
+    display:block;
+  }
+
+  .step-box{
+    width:100%;
+  }
+
+  .step-box:nth-child(2),
+  .step-box:nth-child(3){
+    margin-top:20px;
+  }
+
+  footer{
+    width:100%;
+  }
+}
